--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dropdown-select-list": "^1.0.18",
+    "react-native-element-dropdown": "^2.2.0",
+    "react-native-image-picker": "^4.9.0",
+    "react-native-paper": "^4.12.4",
+    "react-native-select-dropdown": "^2.0.4",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
