--- a/package.json
+++ b/package.json
@@ -12,15 +12,27 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "expo": "~45.0.0",
+    "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.9.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-dropdown-select-list": "^1.0.18",
+    "react-native-element-dropdown": "^2.2.0",
+    "react-native-image-picker": "^4.9.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-paper": "^4.12.4",
+    "react-native-select-dropdown": "^2.0.4",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react-redux": "^7.1.24"
   },
   "private": true,
   "keywords": [],
