--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.3.0",
@@ -22,6 +23,7 @@
     "react-native": "0.68.2",
     "react-native-dropdown-select-list": "^1.0.18",
     "react-native-element-dropdown": "^2.2.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-image-picker": "^4.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^4.12.4",
