--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-paper": "^4.12.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7"
   },
